--- a/0x00-html_advanced/5-index.html
+++ b/0x00-html_advanced/5-index.html
@@ -5,22 +5,23 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
 		<title>Article - Techium</title>
 		<meta name='description' content='Techium is a digital agency'>
-		<link rel="icon" type="image/x-icon" href="/favicon.ico">
-		<link rel='icon' type='image/png' href='/favicon.png'>
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel='icon' type='image/png' href='./favicon.png'>
 	</head>
 	<body>
 		<header>
-			<main>
-				<section> Hero section </section>
-				<section> Services section </section>
-				<section> Works section </section>
-				<section> About section </section>
-				<section> Blog / Last news section </section>
-				<section> Testimonials section </section>
-				<section> Contact section </section>
-				<aside> Aside </aside>
-			</main>
+			Header
 		</header>
+		<main>
+			<section> Hero section </section>
+			<section> Services section </section>
+			<section> Works section </section>
+			<section> About section </section>
+			<section> Blog / Last news section </section>
+			<section> Testimonials section </section>
+			<section> Contact section </section>
+			<aside> Aside </aside>
+		</main>
 		<footer>
 			<p>Footer</p>
 		</footer>
