--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -5,11 +5,13 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
 		<title>Article - Techium</title>
 		<meta name='description' content='Techium is a digital agency'>
-		<link rel="icon" type="image/x-icon" href="/favicon.ico">
-		<link rel='icon' type='image/png' href='/favicon.png'>
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel='icon' type='image/png' href='./favicon.png'>
 	</head>
 	<body>
 		<header>
+			Header
+		</header>
 			<main>
 				<section> Hero section </section>
 				<section> Services section </section>
@@ -31,7 +33,6 @@
 				<section> Contact section </section>
 				<aside> Aside </aside>
 			</main>
-		</header>
 		<footer>
 			<p>Footer</p>
 		</footer>
