--- a/0x00-html_advanced/12-index.html
+++ b/0x00-html_advanced/12-index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
-    <title>Article - Techium</title>
+    <title>Homepage - Techium</title>
     <meta name='description' content='Techium is a digital agency'>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel='icon' type='image/png' href='./favicon.png'>
@@ -37,7 +37,7 @@
           <h3>Web Development</h3>
         </article>
         <article>
-          <h4>Personal Brand</h4>
+          <h3>Personal Brand</h3>
         </article>
       </section>
       <section>
@@ -80,7 +80,6 @@
         <p>We like to know new people</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
       </section>
-      <aside> Aside </aside>
     </main>
     <footer>
       <p>Footer</p>
