--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
-    <title>Article - Techium</title>
+    <title>Homepage - Techium</title>
     <meta name='description' content='Techium is a digital agency'>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel='icon' type='image/png' href='./favicon.png'>
@@ -52,7 +52,7 @@
               <h3>Web Development</h3>
             </article>
             <article>
-              <h4>Personal Brand</h4>
+              <h3>Personal Brand</h3>
             </article>
           </div>
         </div>
@@ -121,7 +121,6 @@
           </div>
         </div>
       </section>
-      <aside> Aside </aside>
     </main>
     <footer>
       <div>
@@ -130,5 +129,3 @@
     </footer>
   </body>
 </html>
-
-
