--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
-    <title>Article - Techium</title>
+    <title>Homepage - Techium</title>
     <meta name='description' content='Techium is a digital agency'>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel='icon' type='image/png' href='./favicon.png'>
@@ -62,7 +62,7 @@
               <h3>Web Development</h3>
             </article>
             <article>
-              <h4>Personal Brand</h4>
+              <h3>Personal Brand</h3>
             </article>
           </div>
         </div>
@@ -139,7 +139,6 @@
           </div>
         </div>
       </section>
-      <aside> Aside </aside>
     </main>
     <hr>
     <!-- Footer -->
@@ -150,5 +149,3 @@
     </footer>
   </body>
 </html>
-
-
