--- a/0x00-html_advanced/blog.html
+++ b/0x00-html_advanced/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
-    <title>Article - Techium</title>
+    <title>Blog - Techium</title>
     <meta name='description' content='Techium is a digital agency'>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel='icon' type='image/png' href='./favicon.png'>
@@ -14,7 +14,7 @@
     <header>
       <div>
         <div>
-          <a href="./18-index.html"><span>Techium</span></a>
+          <a href="/"><span>Techium</span></a>
         </div>
         <nav></nav>
       </div>
@@ -23,7 +23,7 @@
     <hr>
     <!-- Main -->
     <main>
-      <h1>Blog</h1>
+      <h1>Homepage</h1>
       <hr>
       <!-- Hero section -->
       <section>
@@ -65,7 +65,7 @@
               <h3>Web Development</h3>
             </article>
             <article>
-              <h4>Personal Brand</h4>
+              <h3>Personal Brand</h3>
             </article>
           </div>
         </div>
@@ -142,7 +142,6 @@
           </div>
         </div>
       </section>
-      <aside> Aside </aside>
     </main>
     <hr>
     <!-- Footer -->
