--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
-    <title>Article - Techium</title>
+    <title>Homepage - Techium</title>
     <meta name='description' content='Techium is a digital agency'>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel='icon' type='image/png' href='./favicon.png'>
@@ -37,6 +37,7 @@
       <section>
         <div>
           <h2>We help you build your brand!</h2>
+	  <a href='#'>Get Started</a>
         </div>
       </section>
       <hr>
@@ -45,7 +46,6 @@
         <div>
           <header>
             <h2>Services</h2>
-            <a href='#'>Get started</a>
             <p>We work with you</p>
           </header>
           <div>
@@ -74,7 +74,7 @@
               <h3>Web Development</h3>
             </article>
             <article>
-              <h4>Personal Brand</h4>
+              <h3>Personal Brand</h3>
             </article>
           </div>
         </div>
@@ -153,7 +153,6 @@
           <a href='/contact.html'>Get in touch</a>
         </div>
       </section>
-      <aside> Aside </aside>
     </main>
     <hr>
     <!-- Footer -->
@@ -163,7 +162,6 @@
         <a href='https://twitter.com/holbertonschool'>Twitter</a>
         <a href='https://www.instagram.com/holbertonschool/'>Instagram</a>
       </div>
-
     </footer>
   </body>
 </html>
