--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -31,6 +31,7 @@
         <p>This is my subtitle</p>
         <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
       </section>
+      <br>
       <!--Lists-->
       <section>
         <header>
@@ -60,7 +61,7 @@
           </dl>
         </div>
       </section>
-
+      <br>
       <!--Horizontal rule-->
       <section>
         <header>
@@ -70,7 +71,7 @@
           </div>
         </header>
       </section>
-      
+      <br>
       <!--Blockquotes-->
       <section>
         <header>
@@ -89,10 +90,12 @@
           </blockquote>
 	</div>
       </section>
-      
+      <br>
       <!-- Typography -->
       <section>
-        <header>Typography</header>
+        <header>
+          <h2>Typography</h2>
+        </header>
         <div>
           <address>
             320 Stewart Avenue, Unit 12
@@ -108,7 +111,7 @@
           </div>
         </div>
       </section>
-
+      <br>
       <!--Table-->
       <section>
         <header>
