--- a/0x00-html_advanced/5-index.html
+++ b/0x00-html_advanced/5-index.html
@@ -9,17 +9,15 @@
     <link rel='icon' type='image/png' href='./favicon.png'>
   </head>
   <body>
-    <header>
-      Header
-    </header>
+    <header>Header</header>
     <main>
-      <section> Hero section </section>
-      <section> Services section </section>
-      <section> Works section </section>
-      <section> About section </section>
-      <section> Blog / Last news section </section>
-      <section> Testimonials section </section>
-      <section> Contact section </section>
+      <section>Hero section</section>
+      <section>Services section</section>
+      <section>Works section</section>
+      <section>About section</section>
+      <section>Blog / Last news section</section>
+      <section>Testimonials section</section>
+      <section>Contact section</section>
     </main>
     <footer>
       <p>Footer</p>
