--- a/0x00-html_advanced/11-styleguide.html
+++ b/0x00-html_advanced/11-styleguide.html
@@ -9,7 +9,8 @@
     <link rel='icon' type='image/png' href='./favicon.png'>
   </head>
   <body>
-    <header></header>
+    <header>
+    </header>
     <main>
       <section>
         <header>
@@ -23,6 +24,7 @@
         <h6>Heading level 6</h1>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
   </body>
 </html>
