Wrapping logo in span tag

--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -14,7 +14,7 @@
     <header>
       <div>
         <div>
-	  <a href="/"><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></a>
+	  <a href="/"><span><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></span></a>
         </div>
         <nav>
 	    <ul>
@@ -86,7 +86,7 @@
       <section>
         <div>
           <header>
-            <h2>About us</h2>
+            <h2>About Us</h2>
             <p>Everything about us</p>
           </header>
           <div>
