--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -96,11 +96,11 @@
           <h2>Typography</h2>
         </header>
         <div>
-          <address>
-            320 Stewart Avenue, Unit 12
-            <br>
-            New York City NY 10001
-          </address>
+          <div>
+            <address>
+              320 Stewart Avenue, Unit 12<br>New York City NY 10001
+            </address>
+        </div>
           <div>
             <pre>
               <h2>My title</h2>
@@ -111,6 +111,7 @@
             <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
           </div>
         </div>
+
       </section>
     </main>
     <footer>
