--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -14,7 +14,7 @@
     <header>
       <div>
         <div>
-	  <a href="/"><span><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></span></a>
+	  <a href="/"><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></a>
         </div>
         <nav>
 	    <ul>
@@ -177,8 +177,8 @@
     <hr>
     <!-- Footer -->
     <footer>
+      <img src='./logo-black.png' alt='Techium logo' width='160' height='40'>
       <address>234 Washington Street <br> Urbana, Illinois</address>
-      <a href="/"><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></a>
       <div>
 
 	<ul>
@@ -197,5 +197,6 @@
         </ul>
       </div>
     </footer>
+      <img src='./logo-black.png' alt='Techium logo' width='160' height='40'>
   </body>
 </html>
