Replacing div with pre tag

--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -97,15 +97,12 @@
           <h2>Typography</h2>
         </header>
         <div>
-          <address>
-            320 Stewart Avenue, Unit 12
-            <br>
-            New York City NY 10001
+          <address>320 Stewart Avenue, Unit 12<br>New York City NY 10001
           </address>
-          <div>
+          <pre>
             <h2>My title</h2>
             <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
-          </div>
+          </pre>
           <div>
             <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
           </div>
@@ -133,9 +130,7 @@
               <td>May 25th, 1977</td>
             </tr>
             <tr>
-              <th>
-                Star Wars: Episode V - The Empire Strikes Back
-              </th>
+              <th>Star Wars: Episode V - The Empire Strikes Back</th>
               <td>Irvin Kershner</td>
               <td>May 21st, 1980</td>
             </tr>
