--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -66,7 +66,7 @@
           <div>
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-            <h3>Our Culture</h3>
+            <h3>Our culture</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
             <h3>How we work</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
@@ -104,9 +104,9 @@
             <p>We are more than a digital company</p>
           </header>
           <div>
-            <article> Testimonial 1 </article>
-            <article> Testimonial 2 </article>
-            <article> Testimonial 3 </article>
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
           </div>
         </div>
       </section>
