--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -45,11 +45,11 @@
             <li>Felis enim feugiat dolore viverra.</li>
           </ul>
           <h3>Ordered</h3>
-          <ul>
+          <ol>
             <li>Dolor pulvinar etiam magna etiam.</li>
             <li>Sagittis adipiscing lorem eleifend.</li>
             <li>Felis enim feugiat dolore viverra.</li>
-          </ul>
+          </ol>
           <h3>Definition</h3>
           <dl>
             <dt>Definition List title</dt>
@@ -81,7 +81,6 @@
           <h3>Inline quote</h3>
           <q>Stay hungry. Stay foolish.</q>
           </div>
-        </div>
         <div>
 	  <h3>Blockquote</h3>
 	    <blockquote>
@@ -131,9 +130,7 @@
               <td>May 25th, 1977</td>
             </tr>
             <tr>
-              <th scope="row">
-                Star Wars: Episode V - The Empire Strikes Back
-              </th>
+              <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
               <td>Irvin Kershner</td>
               <td>May 21st, 1980</td>
             </tr>
