--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -45,11 +45,11 @@
             <li>Felis enim feugiat dolore viverra.</li>
           </ul>
           <h3>Ordered</h3>
-          <ul>
+          <ol>
             <li>Dolor pulvinar etiam magna etiam.</li>
             <li>Sagittis adipiscing lorem eleifend.</li>
             <li>Felis enim feugiat dolore viverra.</li>
-          </ul>
+          </ol>
           <h3>Definition</h3>
           <dl>
             <dt>Definition List title</dt>
@@ -66,10 +66,10 @@
       <section>
         <header>
           <h2>Horizontal rule</h2>
+        </header>
           <div>
             <hr>
           </div>
-        </header>
       </section>
       <br>
       <!-- Blockquotes -->
@@ -81,7 +81,6 @@
           <h3>Inline quote</h3>
           <q>Stay hungry. Stay foolish.</q>
           </div>
-        </div>
         <div>
 	  <h3>Blockquote</h3>
 	    <blockquote>
@@ -124,26 +123,26 @@
           <caption>Star Wars Trilogy Data</caption>
           <thead>
             <tr>
-              <th scope='col'>Title</th>
-              <th scope='col'>Director</th>
-              <th scope='col'>Release Date</th>
+              <th scope="col">Title</th>
+              <th scope="col">Director</th>
+              <th scope="col">Release Date</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope='row'>Star Wars: Episode IV - A New Hope</th>
+              <th scope="row">Star Wars: Episode IV - A New Hope</th>
               <td>George Lucas</td>
               <td>May 25th, 1977</td>
             </tr>
             <tr>
-              <th scope='row'>
+              <th scope="row">
                 Star Wars: Episode V - The Empire Strikes Back
               </th>
               <td>Irvin Kershner</td>
               <td>May 21st, 1980</td>
             </tr>
             <tr>
-              <th scope='row'>Star Wars: Episode VI - Return of the Jedi</th>
+              <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
               <td>Richard Marquand</td>
               <td>May 25th, 1983</td>
             </tr>
