Adding alt attributes to images

--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -30,7 +30,7 @@
       </div>
 
     </header>
-    <hr>
+    <br>
     <!-- Main -->
     <main>
       <h1>Homepage</h1>
@@ -42,7 +42,7 @@
 	  <a href='#'>Get Started</a>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Services section -->
       <section>
         <div>
@@ -60,7 +60,7 @@
           </div>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Works section -->
       <section>
         <div>
@@ -77,25 +77,25 @@
             </article>
             <article>
 	      <div>
-  	        <img src="images/pic-work-02.jpg"/>
+  	        <img src="images/pic-work-02.jpg" alt=""/>
 	      </div>
 	      <h3><a href="#">Web Development</a></h3>
             </article>
             <article>
 	      <div>
-                <img src="images/pic-work-03.jpg" />
+                <img src="images/pic-work-03.jpg" alt=""/>
               </div>
 	      <h3><a href="#">Personal Brand</a></h3>
             </article>
           </div>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- About Us section -->
       <section>
         <div>
           <header>
-            <h2>About us</h2>
+            <h2>About Us</h2>
             <p>Everything about us</p>
           </header>
           <div>
@@ -110,7 +110,7 @@
           <a href='./about.html'>Learn more about us</a>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Blog section -->
       <section>
         <div>
@@ -120,7 +120,7 @@
           <div>
             <article>
               <div>
-                <img src="images/pic-blog-01.jpg" width="305" height="205" />
+                <img src="images/pic-blog-01.jpg" width="305" height="205" alt=""/>
               </div>
               <p>Career</p>
 	      <h3><a href='#'>Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -149,7 +149,7 @@
           </div>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Testimonials section -->
       <section>
         <div>
@@ -183,7 +183,7 @@
           </div>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Contact section -->
       <section>
         <div>
@@ -198,7 +198,7 @@
         </div>
       </section>
     </main>
-    <hr>
+    <br>
     <!-- Footer -->
     <footer>
       <address>234 Washington Street <br> Urbana, Illinois</address>
