--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -9,7 +9,7 @@
     <link rel='icon' type='image/png' href='./favicon.png'>
   </head>
   <body>
-    <hr>
+    <br>
     <!-- Header -->
     <header>
       <div>
@@ -102,7 +102,7 @@
             <img src="images/pic-about-us.jpg" width="460" height="447" alt="" />
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-            <h3>Our Culture</h3>
+            <h3>Our culture</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
             <h3>How we work</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
@@ -201,8 +201,8 @@
     <br>
     <!-- Footer -->
     <footer>
+      <img src='./logo-black.png' alt='Techium logo' width='160' height='40'>
       <address>234 Washington Street <br> Urbana, Illinois</address>
-      <a href="/"><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></a>
       <div>
 
 	<ul>
@@ -221,5 +221,6 @@
         </ul>
       </div>
     </footer>
+      <a href="/"><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></a>
   </body>
 </html>
