--- a/0x00-html_advanced/index.html
+++ b/0x00-html_advanced/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang='en' dir='ltr' >
+<html lang="en" dir="ltr" >
   <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Homepage - Techium</title>
-    <meta name='description' content='Techium is a digital agency'>
+    <meta name="description" content="Techium is a digital agency">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel='icon' type='image/png' href='./favicon.png'>
+    <link rel="icon" type="image/png" href="./favicon.png">
   </head>
   <body>
     <hr>
@@ -14,17 +14,17 @@
     <header>
       <div>
         <div>
-	  <a href="/"><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></a>
+	  <a href="/"><img src="./logo-black.png" alt="Techium logo" width="160" height="40"></a>
         </div>
         <nav>
 	    <ul>
-	      <li><a href='/'>Home</a></li>
-	      <li><a href='#services'>Services</a></li>
-	      <li><a href='#works'>Works</a></li>
-	      <li><a href='#about'>About</a></li>
-	      <li><a href='#blog'>Blog</a></li>
-	      <li><a href='#testimonials'>Testimonials</a></li>
-	      <li><a href='#contact'>Contact</a></li>
+	      <li><a href="/">Home</a></li>
+	      <li><a href="#services">Services</a></li>
+	      <li><a href="#works">Works</a></li>
+	      <li><a href="#about">About</a></li>
+	      <li><a href="#blog">Blog</a></li>
+	      <li><a href="#testimonials">Testimonials</a></li>
+	      <li><a href="#contact">Contact</a></li>
 	    </ul>
 	</nav>
       </div>
@@ -39,7 +39,7 @@
       <section>
         <div>
           <h2>We help you build your brand!</h2>
-	  <a href='#'>Get Started</a>
+	  <a href="#">Get Started</a>
         </div>
       </section>
       <hr>
@@ -51,12 +51,12 @@
             <p>We work with you</p>
           </header>
           <div>
-	    <h3><a href='#'>Design & Concept</a></h3>
-            <h3><a href='#'>Digital Strategy</a></h3>
-            <h3><a href='#'>Content Strategy</a></h3>
-            <h3><a href='#'>UX Design</a></h3>
-            <h3><a href='#'>Web Development</a></h3>
-            <h3><a href='#'>Social Media</a></h3>
+	    <h3><a href="#">Design & Concept</a></h3>
+            <h3><a href="#">Digital Strategy</a></h3>
+            <h3><a href="#">Content Strategy</a></h3>
+            <h3><a href="#">UX Design</a></h3>
+            <h3><a href="#">Web Development</a></h3>
+            <h3><a href="#">Social Media</a></h3>
           </div>
         </div>
       </section>
@@ -69,26 +69,25 @@
             <p>Take a look in our portfolio</p>
           </header>
           <div>
-            <div>
-              <img src='images/pic-work-01.jpg'/>
-            </div>
             <article>
-	      <h3><a href='#'>Interior Design</a></h3>
+              <div>
+                <img src="images/pic-work-01.jpg" alt=""/>
+              </div>
+              <h3><a href="#">Interior Design</a></h3>
             </article>
-            <div>
-              <img src='images/pic-work-02.jpg'/>
-            </div>
             <article>
-	      <h3><a href='#'>Web Development</a></h3>
+              <div>
+                <img src="images/pic-work-02.jpg" alt=""/>
+              </div>
+	            <h3><a href="#">Web Development</a></h3>
             </article>
-            <div>
-              <img src='images/pic-work-03.jpg' />
-             </div>
             <article>
-	      <h3><a href='#'>Personal Brand</a></h3>
+              <div>
+                <img src="images/pic-work-03.jpg" alt=""/>
+               </div>
+	            <h3><a href="#">Personal Brand</a></h3>
             </article>
           </div>
-
         </div>
       </section>
       <hr>
@@ -99,7 +98,7 @@
             <h2>About us</h2>
             <p>Everything about us</p>
           </header>
-          <img src='images/pic-about-us.jpg' width='460' height="447" />
+          <img src="images/pic-about-us.jpg" width="460" height="447" alt="" />
           <div>
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
@@ -108,7 +107,7 @@
             <h3>How we work</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
           </div>
-          <a href='./about.html'>Learn more about us</a>
+          <a href="./about.html">Learn more about us</a>
         </div>
       </section>
       <hr>
@@ -121,28 +120,28 @@
           <div>
             <article>
               <div>
-                <img src='images/pic-blog-01.jpg' width='305' height='205' />
+                <img src="images/pic-blog-01.jpg" width="305" height="205" alt=""/>
               </div>
               <p>Career</p>
-	      <h3><a href='#'>Hoc loco tenere se Triarius non potuit.</a></h3>
+	      <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
 	      <small>By Kelly D.</small>
             </article>
             <article>
               <div>
-                <img src='images/pic-blog-02.jpg' width='305' height='205' />
+                <img src="images/pic-blog-02.jpg" width="305" height="205" alt=""/>
               </div>
               <p>Digital Life</p>
-	      <h3><a href='#'>Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+	      <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
 	      <small>By William A.</small>
             </article>
             <article>
               <div>
-                <img src='images/pic-blog-03.jpg' width='305' height='205' />
+                <img src="images/pic-blog-03.jpg" width="305" height="205" alt=""/>
               </div>
               <p>Social</p>
-	      <h3><a href='#'>Bestiarum vero nullum iudicium puto.</a></h3>
+	      <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
 	      <small>By Frances J.</small>
             </article>
@@ -160,23 +159,23 @@
           </header>
           <div>
             <article>
-              <img src='images/pic-person-01.jpg' alt='Yuri Y. avatar' width='100px' height='100px' />
+              <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px" />
 	      <blockquote>
-	        <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+	        <p>I am completely blown away. Thanks to Techium, we"ve just launched our 5th website!</p>
 		<cite>Yuri Y.</cite>
 	      </blockquote>
 	    </article>
             <article>
-              <img src='images/pic_person_02.jpg' alt='Dorrie S. avatar' width='100px' height='100px' />
+              <img src="images/pic_person_02.jpg" alt="Dorrie S. avatar" width="100px" height="100px" />
 	      <blockquote>
 		<p>Thank you so much for your help. Techium company is awesome!</p>
 		<cite>Dorrie S.</cite>
 	      </blockquote>
       </article>
             <article> 
-              <img src='images/pic_person_03.jpg' alt='Sven H. avatar' width='100px' height='100px' />
+              <img src="images/pic_person_03.jpg" alt="Sven H. avatar" width="100px" height="100px" />
 	      <blockquote>
-	        <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+	        <p>I love your system. Definitely worth the investment. I"d be lost without Techium company.</p>
 	        <cite>Sven H.</cite>
               </blockquote>
       </article>
@@ -195,20 +194,20 @@
           <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
           </div>
-          <a href='./contact.html'>Get in touch</a>
+          <a href="./contact.html">Get in touch</a>
         </div>
       </section>
     </main>
     <hr>
     <!-- Footer -->
     <footer>
+      <img src="./logo-black.png" alt="Techium logo" width="160" height="40">
       <address>234 Washington Street <br> Urbana, Illinois</address>
-      <a href="/"><img src='./logo-black.png' alt='Techium logo' width='160' height='40'></a>
       <div>
 	<ul>
 	  <li>
-	    <a href='https://www.facebook.com/HolbertonSchool/'>
-	      <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width='25px' height='25px'>
+	    <a href="https://www.facebook.com/HolbertonSchool/">
+	      <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
                 <title>
                   Facebook icon
                 </title>
@@ -217,8 +216,8 @@
 	    </a>
 	  </li>
 	  <li>
-            <a href='https://twitter.com/holbertonschool'>
-              <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width='25px' height='25px'>
+            <a href="https://twitter.com/holbertonschool">
+              <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
                 <title>
                   Twitter icon
                 </title>
@@ -227,8 +226,8 @@
             </a>
          </li>
 	  <li>
-            <a href='https://www.instagram.com/holbertonschool/'>
-              <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width='25px' height='25px'>
+            <a href="https://www.instagram.com/holbertonschool/">
+              <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
                 <title>
                   Instagram icon
                 </title>
@@ -242,9 +241,9 @@
       <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
       <div>
         <ul>
-          <li><a href='#'>Terms of Use</a></li>
-          <li><a href='#'>Privacy Policy</a></li>
-          <li><a href='#'>Cookie Policy</a></li>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Cookie Policy</a></li>
         </ul>
       </div>
     </footer>
