Removing px from svg icon sizes

--- a/0x00-html_advanced/index.html
+++ b/0x00-html_advanced/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="./favicon.png">
   </head>
   <body>
-    <hr>
+    <br>
     <!-- Header -->
     <header>
       <div>
@@ -30,11 +30,11 @@
       </div>
 
     </header>
-    <hr>
+    <br>
     <!-- Main -->
     <main>
       <h1>Homepage</h1>
-      <hr>
+      <br>
       <!-- Hero section -->
       <section>
         <div>
@@ -42,7 +42,7 @@
 	  <a href="#">Get Started</a>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Services section -->
       <section>
         <div>
@@ -60,7 +60,7 @@
           </div>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Works section -->
       <section>
         <div>
@@ -90,7 +90,7 @@
           </div>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- About Us section -->
       <section>
         <div>
@@ -110,7 +110,7 @@
           <a href="./about.html">Learn more about us</a>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Blog section -->
       <section>
         <div>
@@ -149,7 +149,7 @@
           </div>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Testimonials section -->
       <section>
         <div>
@@ -183,7 +183,7 @@
           </div>
         </div>
       </section>
-      <hr>
+      <br>
       <!-- Contact section -->
       <section>
         <div>
@@ -198,7 +198,7 @@
         </div>
       </section>
     </main>
-    <hr>
+    <br>
     <!-- Footer -->
     <footer>
       <img src="./logo-black.png" alt="Techium logo" width="160" height="40">
@@ -207,7 +207,7 @@
 	<ul>
 	  <li>
 	    <a href="https://www.facebook.com/HolbertonSchool/">
-	      <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
+	      <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                 <title>
                   Facebook icon
                 </title>
@@ -217,7 +217,7 @@
 	  </li>
 	  <li>
             <a href="https://twitter.com/holbertonschool">
-              <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
+              <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                 <title>
                   Twitter icon
                 </title>
@@ -227,7 +227,7 @@
          </li>
 	  <li>
             <a href="https://www.instagram.com/holbertonschool/">
-              <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
+              <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                 <title>
                   Instagram icon
                 </title>
@@ -237,7 +237,7 @@
           </li>
 	</ul>
       </div>
-      <hr>
+      <br>
       <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
       <div>
         <ul>
