--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -45,11 +45,11 @@
             <li>Felis enim feugiat dolore viverra.</li>
           </ul>
           <h3>Ordered</h3>
-          <ul>
+          <ol>
             <li>Dolor pulvinar etiam magna etiam.</li>
             <li>Sagittis adipiscing lorem eleifend.</li>
             <li>Felis enim feugiat dolore viverra.</li>
-          </ul>
+          </ol>
           <h3>Definition</h3>
           <dl>
             <dt>Definition List title</dt>
@@ -69,7 +69,7 @@
         </header>
           <div>
             <hr>
-          <div>
+          </div>
       </section>
       <br>
       <!-- Blockquotes -->
@@ -91,7 +91,7 @@
 	</div>
       </section>
       <br>
-      <!--  Typography  -->
+      <!-- Typography -->
       <section>
         <header>
           <h2>Typography</h2>
