--- a/0x00-html_advanced/39-styleguide.html
+++ b/0x00-html_advanced/39-styleguide.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang='en' dir='ltr' >
+<html lang="en" dir="ltr" >
   <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Styleguide - Techium</title>
-    <meta name='description' content='Techium is a digital agency'>
-    <link rel='icon' type='image/x-icon' href='./favicon.ico'>
-    <link rel='icon' type='image/png' href='./favicon.png'>
+    <meta name="description" content="Techium is a digital agency">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
   </head>
   <body>
     <header>
@@ -32,7 +32,7 @@
         <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
       </section>
       <br>
-      <!--Lists-->
+      <!-- Lists -->
       <section>
         <header>
           <h2>Lists</h2>
@@ -45,11 +45,11 @@
             <li>Felis enim feugiat dolore viverra.</li>
           </ul>
           <h3>Ordered</h3>
-          <ul>
+          <ol>
             <li>Dolor pulvinar etiam magna etiam.</li>
             <li>Sagittis adipiscing lorem eleifend.</li>
             <li>Felis enim feugiat dolore viverra.</li>
-          </ul>
+          </ol>
           <h3>Definition</h3>
           <dl>
             <dt>Definition List title</dt>
@@ -62,7 +62,7 @@
         </div>
       </section>
       <br>
-      <!--Horizontal rule-->
+      <!-- Horizontal rule -->
       <section>
         <header>
           <h2>Horizontal rule</h2>
@@ -72,7 +72,7 @@
         </header>
       </section>
       <br>
-      <!--Blockquotes-->
+      <!-- Blockquotes -->
       <section>
         <header>
           <h2>Blockquotes</h2>
@@ -80,7 +80,6 @@
         <div>
           <h3>Inline quote</h3>
           <q>Stay hungry. Stay foolish.</q>
-          </div>
         </div>
         <div>
 	  <h3>Blockquote</h3>
@@ -103,8 +102,10 @@
             New York City NY 10001
           </address>
           <div>
+            <pre>
             <h2>My title</h2>
             <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
+            </pre>
           </div>
           <div>
             <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
@@ -112,7 +113,7 @@
         </div>
       </section>
       <br>
-      <!--Table-->
+      <!-- Table -->
       <section>
         <header>
           <h2>Table</h2>
@@ -121,26 +122,26 @@
           <caption>Star Wars Trilogy Data</caption>
           <thead>
             <tr>
-              <th scope='col'>Title</th>
-              <th scope='col'>Director</th>
-              <th scope='col'>Release Date</th>
+              <th scope="col">Title</th>
+              <th scope="col">Director</th>
+              <th scope="col">Release Date</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope='row'>Star Wars: Episode IV - A New Hope</th>
+              <th scope="row">Star Wars: Episode IV - A New Hope</th>
               <td>George Lucas</td>
               <td>May 25th, 1977</td>
             </tr>
             <tr>
-              <th scope='row'>
+              <th scope="row">
                 Star Wars: Episode V - The Empire Strikes Back
               </th>
               <td>Irvin Kershner</td>
               <td>May 21st, 1980</td>
             </tr>
             <tr>
-              <th scope='row'>Star Wars: Episode VI - Return of the Jedi</th>
+              <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
               <td>Richard Marquand</td>
               <td>May 25th, 1983</td>
             </tr>
@@ -148,7 +149,7 @@
         </table>
       </section>
       <br>      
-      <!--Details-->
+      <!-- Details -->
       <section>
         <header>
           <h2>Details</h2>
@@ -169,17 +170,17 @@
         </div>
       </section>
       <br>
-      <!--Video-->
+      <!-- Video -->
       <section>
         <header>
           <h2>Video</h2>
         </header>
-        <video src='https://archive.org/download/BeanstalkBunny/003BeanstalkBunnyMm-Greed.mp4' controls loop poster='https://www.thecollectionshop.com/Image_Resize_Detail_Image.asp?MiscImage=83263cj'>
+        <video src="https://archive.org/download/BeanstalkBunny/003BeanstalkBunnyMm-Greed.mp4" controls loop poster="https://www.thecollectionshop.com/Image_Resize_Detail_Image.asp?MiscImage=83263cj">
           Sorry, your browser doesn't support HTML5 video
         </video>
       </section>
       <br>     
-      <!--Audio-->
+      <!-- Audio -->
       <section>
         <header>
           <h2>Audio</h2>
