--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -45,11 +45,11 @@
             <li>Felis enim feugiat dolore viverra.</li>
           </ul>
           <h3>Ordered</h3>
-          <ul>
+          <ol>
             <li>Dolor pulvinar etiam magna etiam.</li>
             <li>Sagittis adipiscing lorem eleifend.</li>
             <li>Felis enim feugiat dolore viverra.</li>
-          </ul>
+          </ol>
           <h3>Definition</h3>
           <dl>
             <dt>Definition List title</dt>
@@ -66,10 +66,10 @@
       <section>
         <header>
           <h2>Horizontal rule</h2>
-          <div>
-            <hr>
-          </div>
         </header>
+        <div>
+          <hr>
+        </div>
       </section>
       <br>
       <!-- Blockquotes -->
@@ -98,10 +98,12 @@
         <div>
           <address>320 Stewart Avenue, Unit 12<br>New York City NY 10001</address>
           <div>
-            <pre>
-              <h2>My title</h2>
-              <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
-            </pre> 
+            <code>
+              <pre>
+                <h2>My title</h2>
+                <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
+              </pre>  
+            </code>
           </div>
         <div>
           <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
