Making fixes in order to meet requirements

--- a/0x07-accessibility/fix-a11y/10-index.html
+++ b/0x07-accessibility/fix-a11y/10-index.html
@@ -23,8 +23,8 @@
           </nav>
         </div>
       </div>
+      <h1>Homepage</h1>
     </header>
-    <h1>Homepage</h1>
     <main>
     <section class="section">
       <div class="container">
@@ -89,7 +89,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="section">
       <div class="container">
         <div class="row">
